--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -9,6 +9,8 @@
         <h2 name='username'>username:{{user.username}}</h2>
     <h2>email:{{user.email}}</h2>
     <!-- el pass cryptee sha1/4g<h2>{{user.password}}</h2> -->
-   
-    
+   <!-- <h2>your last predection :{{main.users_result1.username}}</h2>-->
+ 
+
+  
 {% endblock %}
