--- a/users/templates/users/contact.html
+++ b/users/templates/users/contact.html
@@ -13,9 +13,10 @@
             {{form.as_p}}
             
                 <br/>
+            
             <input class="w3-input w3-border w3-sand"  name="name" type="text" placeholder="full name"></p>
-            <input class="w3-input w3-border w3-sand" name="last" type="text" placeholder="phone number"></p>
-            <input class="w3-input w3-border w3-sand" name="email" type="text" placeholder="Email" ></p>
+            <input class="w3-input w3-border w3-sand" name="mobileC" type="number" placeholder="phone number"></p>
+            <input class="w3-input w3-border w3-sand" name="email" type="email" placeholder="Email" ></p>
             <input class="w3-input w3-border w3-sand" name="message" type="text" placeholder="Message"></p>
             <button type="submit" style="color: white; background-color: #04AA6D; margin-left: 10px; " class="btn">Contact Us</button>
         </form>
