--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -25,7 +25,8 @@
                 <button class="btn ">Sign In</button>
             </div>
             <div class="form-group">
-                <small class="text-muted ml-3" >Don't have an account yet? <a href="{% url 'register' %}">Sign Up Today</a></small>
+                <small class="text-muted ml-3" >Don't have an account yet? <a href="{% url 'register' %}">Sign Up Today ||</a></small>
+                <small class="text-muted ml-3" >Forget password? <a href="{% url 'reset_password' %}">Reset password</a></small>
             </div>
            
         </form>
