--- a/users/templates/users/data.html
+++ b/users/templates/users/data.html
@@ -31,7 +31,7 @@
     {% endif %}
 
 {% else %}
-<h1>denied please login as Tbib</h1>
+<h1>denied please login as a doctor (superadmin)</h1>
 {% endif %}
 
 {% endblock content %}
