--- a/users/templates/users/dashboard_with_pivot.html
+++ b/users/templates/users/dashboard_with_pivot.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
+{% if user.is_superuser %}
 <div class="row mt-3 pt-3">
 
     <div class="col-md-8">
@@ -51,4 +52,7 @@
 
     </div>
 </div>
+{% else %}
+<h1>denied please login as a doctor (superadmin)</h1>
+{% endif %}
 {% endblock %}
