--- a/users/templates/users/dashboard_with_pivot.html
+++ b/users/templates/users/dashboard_with_pivot.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-{% if user.is_superuser %}
+{% if user.is_superuser or user.groups.all %}
 <div class="row mt-3 pt-3">
 
     <div class="col-md-8">
